@@ -1,6 +1,7 @@
 2012-08-22  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Added hierarchical facets
+	* Added feature #40056: Frequent searches
 
 2012-08-21  Ingo Renner  <ingo.renner@dkd.de>
 
